src/test/deca/syntax/valid/variables/multi_assignation.deca
// Description:
//    Test file demonstrating the use of a multiple assignation in Deca
//
// Results:
//    TODO
//
// History:
//    created on 06/01/2025

{
    a = 0;
    b = 1;
    c = 2;

    d = 0.0;
    e = 1.0;
    f = 2.0;

    g = true;
    h = false;

    i = "Hello";
    j = "World";
}