src/test/deca/syntax/invalid/class/field/missing_semicolon_multiple_12.deca
// Description:
//    Tests a syntactically incorrect program for multiple field declarations missing a semicolon
//
// Results:
//    Line 10 : Error, expected ';'.
//
// History:
//    created on 07/01/2025

class TestClass {
    int a = 10, b = 20
    float c = 10.0, d = 20.0;
}